# gst

./: .gitignore
chain/src/: chain.c
cross_compile/: basic-tutorial-1.c  c.sh
glib/: Makefile  ex-compile.c  garray-2.c  garray-4.c  garray-6.c  garray-7.c  ghashtable-5.c  ghashtable-7.c  glist-1.c  gqueue-3.c  grelation-1.c  gslist-10.c  gslist-11.c  gslist-3.c  gslist-4.c  gslist-6.c  gslist-8.c  gtree-1.c  gtree-2.c  gtree-3.c  gtree-5.c
glib_container/: garray-1.c  garray-3.c  garray-5.c  garray-8.c  ghashtable-1.c  ghashtable-2.c  ghashtable-3.c  ghashtable-4.c  ghashtable-6.c  glist-2.c  glist-3.c  glist-4.c  gqueue-1.c  gqueue-2.c  gqueue-4.c  gqueue-5.c  gqueue-6.c  gslist-1.c  gslist-2.c  gslist-5.c  gslist-7.c  gslist-9.c  gtree-4.c  gtree-6.c
glib_event/: source.c  timeout.c  timeout2.c
gobj2/: viewer_file.h
gobj3/: hello-app.c  main.c
gobject/: Makefile  edc-host.c  edc-host.h  edc-object.h  main.c  myclock.c  myclock.h
gobject/edc-host/: Makefile  edc-host.c  main.c
gobject/gobj2/: Makefile  main.c  viewer_file.c
gobject/gobj3/: Makefile  hello-app.h
gobject/myclock/: Makefile  main.c
gobject/some-object/: Makefile  main.c  some-object.c  some-object.h
gst_stream_recv/: recv_rk3399pc.sh
gst_tutorial/01_hello_world/: CMakeLists.txt  a.sh  b.sh  basic-tutorial-1.c
gst_tutorial/02_concepts/: Makefile  basic-tutorial-1.c  basic-tutorial-2.c  exercise.c
gst_tutorial/03_dynamic/: basic-tutorial-3.c
meson/: main.c
rk3399/: Makefile
template/: README.txt
template/app/src/: Makefile.am  tester.c
v4l2/: Makefile  helper.c  helper.h  v4l2.c
(+116 files in other folders)
